force-app/main/default/objects/Case/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <description>Field to register adittional information about the Case.</description>
    <label>Additional Information</label>
    <type>TextArea</type>
</CustomField>