force-app/main/default/objects/Case/fields/Case_Language__c.field-meta.xml
<CustomField>
    <fullName>Case_Language__c</fullName>
    <description>Case Languages picklist</description>
    <label>Inbox Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerLanguage</valueSetName>
    </valueSet>
</CustomField>