force-app/main/default/objects/Case/fields/CaseOwnerTeam__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerTeam__c</fullName>
    <description>field to display Case Owner Teams</description>
    <formula>IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Bratislava&quot; ), &quot;CSO Bratislava; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Romania&quot; ), &quot;CSO Romania; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Moldova&quot; ), &quot;CSO Moldova; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Bulgaria&quot; ), &quot;CSO Bulgaria; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Serbia&quot; ), &quot;CSO Serbia; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Card Management Bratislava&quot; ), &quot;CSO Card Management Bratislava; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Customer Support Bratislava&quot; ), &quot;CSO Customer Support Bratislava; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Card Management Romania&quot; ), &quot;CSO Card Management Romania; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Customer Support Romania&quot; ), &quot;CSO Customer Support Romania; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO CMT Bratislava&quot; ), &quot;CSO CMT Bratislava; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO CMT Romania&quot; ), &quot;CSO CMT Romania; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Manager&quot; ), &quot;CSO Manager; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Agent Card Management Bratislava&quot; ), &quot;CSO Agent Card Management Bratislava; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Agent Customer Support Bratislava&quot; ), &quot;CSO Agent Customer Support Bratislava; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO CMT Agent Bratislava&quot; ), &quot;CSO CMT Agent Bratislava; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Agent Card Management Romania&quot; ), &quot;CSO Agent Card Management Romania; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Agent Customer Support Romania&quot; ), &quot;CSO Agent Customer Support Romania; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO CMT Agent Romania&quot; ), &quot;CSO CMT Agent Romania; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Agent Bulgaria&quot; ), &quot;CSO Agent Bulgaria; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Agent Serbia&quot; ), &quot;CSO Agent Serbia; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Agent Moldova&quot; ), &quot;CSO Agent Moldova; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Team Lead Card Management Bratislava&quot; ), &quot;CSO Team Lead Card Management Bratislava; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Team Lead Customer Support Bratislava&quot; ), &quot;CSO Team Lead Customer Support Bratislava; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Team Lead Card Management Romania&quot; ), &quot;CSO Team Lead Card Management Romania; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Team Lead Customer Support Romania&quot; ), &quot;CSO Team Lead Customer Support Romania; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Team Lead Bulgaria&quot; ), &quot;CSO Team Lead Bulgaria; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;SO Team Lead Serbia&quot; ), &quot;SO Team Lead Serbia; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Team Lead Moldova&quot; ), &quot;CSO Team Lead Moldova; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO CMT Team Lead Bratislava&quot; ), &quot;CSO CMT Team Lead Bratislava; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CCSO CMT Team Lead Romania&quot; ), &quot;CSO CMT Team Lead Romania; &quot;,null ) &amp;
IF ( INCLUDES ( Owner:User.Team__c , &quot;CSO Senior Agent Bratislava&quot; ), &quot;CSO Senior Agent Bratislava; &quot;,null )</formula>
    <label>Case Owner Team</label>
    <type>Text</type>
</CustomField>