force-app/main/default/objects/Case/fields/CategoryT1__c.field-meta.xml
<CustomField>
    <fullName>CategoryT1__c</fullName>
    <description>Field to register the T1 category of the Case</description>
    <label>Category T1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Credit Management</fullName>
            </value>
            <value>
                <fullName>Customer invoicing</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Vouchers</fullName>
            </value>
            <value>
                <fullName>VAS</fullName>
            </value>
            <value>
                <fullName>FS acceptance support</fullName>
            </value>
            <value>
                <fullName>FS operation</fullName>
            </value>
            <value>
                <fullName>Fleet Online</fullName>
            </value>
            <value>
                <fullName>Contracting process</fullName>
            </value>
            <value>
                <fullName>Request for offer</fullName>
            </value>
            <value>
                <fullName>Authority request</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Petrom CC (RO)</fullName>
            </value>
            <value>
                <fullName>Fuel quality</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Case Category 1</fullName>
                <isActive>false</isActive>
                <label>Case Category 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>