force-app/main/default/objects/Case/fields/CategoryT2__c.field-meta.xml
<CustomField>
    <fullName>CategoryT2__c</fullName>
    <description>Field to define the T2 Category of the Case</description>
    <label>Category T2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CategoryT1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card support</fullName>
            </value>
            <value>
                <fullName>Card operation</fullName>
            </value>
            <value>
                <fullName>Credit management support</fullName>
            </value>
            <value>
                <fullName>Credit management operation</fullName>
            </value>
            <value>
                <fullName>Invoicing support</fullName>
            </value>
            <value>
                <fullName>Invoicing operation</fullName>
            </value>
            <value>
                <fullName>Customer data and Conditions (New customer)</fullName>
            </value>
            <value>
                <fullName>Master-data operation (Existing customer)</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Systems operation</fullName>
            </value>
            <value>
                <fullName>Voucher general support</fullName>
            </value>
            <value>
                <fullName>Voucher order support</fullName>
            </value>
            <value>
                <fullName>Voucher order creation</fullName>
            </value>
            <value>
                <fullName>Voucher general operation</fullName>
            </value>
            <value>
                <fullName>Toll support</fullName>
            </value>
            <value>
                <fullName>Toll operation</fullName>
            </value>
            <value>
                <fullName>VAT refund</fullName>
            </value>
            <value>
                <fullName>CO2</fullName>
            </value>
            <value>
                <fullName>FS details &amp; network</fullName>
            </value>
            <value>
                <fullName>Technical Problems</fullName>
            </value>
            <value>
                <fullName>Card User Problems</fullName>
            </value>
            <value>
                <fullName>FS status</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>FS requests</fullName>
            </value>
            <value>
                <fullName>FOS support</fullName>
            </value>
            <value>
                <fullName>FOS account</fullName>
            </value>
            <value>
                <fullName>FOS operation</fullName>
            </value>
            <value>
                <fullName>New Contract (New Customer)</fullName>
            </value>
            <value>
                <fullName>Contract Amendment</fullName>
            </value>
            <value>
                <fullName>Announcement of Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>