force-app/main/default/objects/Case/fields/CategoryT3__c.field-meta.xml
<CustomField>
    <fullName>CategoryT3__c</fullName>
    <description>Field to define the T3 Category of the Case</description>
    <label>Category T3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CategoryT2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card status</fullName>
            </value>
            <value>
                <fullName>Order support</fullName>
            </value>
            <value>
                <fullName>Card Limit availability</fullName>
            </value>
            <value>
                <fullName>PIN support</fullName>
            </value>
            <value>
                <fullName>Acceptance/Usage questions</fullName>
            </value>
            <value>
                <fullName>Card delivery status</fullName>
            </value>
            <value>
                <fullName>Lock/Unlock</fullName>
            </value>
            <value>
                <fullName>Card activation</fullName>
            </value>
            <value>
                <fullName>Card fees</fullName>
            </value>
            <value>
                <fullName>Cost center</fullName>
            </value>
            <value>
                <fullName>CCTV registration</fullName>
            </value>
            <value>
                <fullName>Other card support</fullName>
            </value>
            <value>
                <fullName>PIN reset</fullName>
            </value>
            <value>
                <fullName>Lock</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Change card limit</fullName>
            </value>
            <value>
                <fullName>PUK request</fullName>
            </value>
            <value>
                <fullName>PIN change</fullName>
            </value>
            <value>
                <fullName>Unlock</fullName>
            </value>
            <value>
                <fullName>Card replacement</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Toll activation/deactivation</fullName>
            </value>
            <value>
                <fullName>Vehicle/Cost center change</fullName>
            </value>
            <value>
                <fullName>CCTV registration (RO)</fullName>
            </value>
            <value>
                <fullName>Credit limit details</fullName>
            </value>
            <value>
                <fullName>Payment details</fullName>
            </value>
            <value>
                <fullName>Customer block information</fullName>
            </value>
            <value>
                <fullName>Other credit management support</fullName>
            </value>
            <value>
                <fullName>Change account limit</fullName>
            </value>
            <value>
                <fullName>MEX update/uplift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>