force-app/main/default/objects/Case/fields/ClosureDetails__c.field-meta.xml
<CustomField>
    <fullName>ClosureDetails__c</fullName>
    <description>Field to register the details for the closure of the Case</description>
    <label>Closure Details</label>
    <type>TextArea</type>
</CustomField>