force-app/main/default/objects/Case/fields/ClosureReason__c.field-meta.xml
<CustomField>
    <fullName>ClosureReason__c</fullName>
    <description>Field to say if there is a reason to close the Case or not.</description>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case completed</fullName>
            </value>
            <value>
                <fullName>All related Cases completed</fullName>
            </value>
            <value>
                <fullName>Justified</fullName>
            </value>
            <value>
                <fullName>Unjustified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>