force-app/main/default/objects/Case/fields/CompanyCodeCountry__c.field-meta.xml
<CustomField>
    <fullName>CompanyCodeCountry__c</fullName>
    <description>field used for sharing rules</description>
    <label>Company Code Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerCountry</valueSetName>
    </valueSet>
</CustomField>