force-app/main/default/objects/Case/fields/CompensationAmount__c.field-meta.xml
<CustomField>
    <fullName>CompensationAmount__c</fullName>
    <label>Compensation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>