force-app/main/default/objects/Case/fields/CompensationDetails__c.field-meta.xml
<CustomField>
    <fullName>CompensationDetails__c</fullName>
    <label>Compensation Details</label>
    <type>TextArea</type>
</CustomField>