force-app/main/default/objects/Case/fields/CompensationType__c.field-meta.xml
<CustomField>
    <fullName>CompensationType__c</fullName>
    <label>Compensation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial compensation</fullName>
            </value>
            <value>
                <fullName>Non-financial compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>