force-app/main/default/objects/Case/fields/CreatedEmailMessageSent__c.field-meta.xml
<CustomField>
    <fullName>CreatedEmailMessageSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field created to control the &apos;created email&apos; email message</description>
    <label>Created Email Message Sent</label>
    <type>Checkbox</type>
</CustomField>