force-app/main/default/objects/Case/fields/CustomerFeedback__c.field-meta.xml
<CustomField>
    <fullName>CustomerFeedback__c</fullName>
    <label>Customer Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>