force-app/main/default/objects/Case/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Field to show the due Date</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>