force-app/main/default/objects/Case/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Field to show the Language</description>
    <formula>IF( OR( ISBLANK(AccountId),ISBLANK(TEXT(Account.Language__c) ) ),TEXT(Case_Language__c), TEXT(Account.Language__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language</label>
    <type>Text</type>
</CustomField>