force-app/main/default/objects/Case/fields/OpenChildCases__c.field-meta.xml
<CustomField>
    <fullName>OpenChildCases__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to identify if this Case has any child cases that are open</description>
    <label>Open Child Cases</label>
    <type>Checkbox</type>
</CustomField>