force-app/main/default/objects/Case/fields/Reopened__c.field-meta.xml
<CustomField>
    <fullName>Reopened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to inform if the Case has been closed before or not.</description>
    <label>Reopened</label>
    <type>Checkbox</type>
</CustomField>