force-app/main/default/objects/Case/fields/ReopenedInFlow__c.field-meta.xml
<CustomField>
    <fullName>ReopenedInFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field created to be used only in the reopen case flow to avoid the validation rule</description>
    <label>Reopened in Flow</label>
    <type>Checkbox</type>
</CustomField>