force-app/main/default/objects/Case/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer - Representative</fullName>
            </value>
            <value>
                <fullName>Customer - Driver</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Filling Station</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Customer - Driver Internal</fullName>
                <isActive>false</isActive>
                <label>Customer - Driver Internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>