force-app/main/default/objects/Case/recordTypes/Case.recordType-meta.xml
<RecordType>
    <fullName>Case</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>CEP Cards Case</label>
</RecordType>