force-app/main/default/objects/Case/recordTypes/Claim.recordType-meta.xml
<RecordType>
    <fullName>Claim</fullName>
    <active>true</active>
    <businessProcess>Claim %2B Complaint Support Process</businessProcess>
    <label>CEP Cards Claim</label>
</RecordType>