force-app/main/default/objects/Case/recordTypes/Complaint.recordType-meta.xml
<RecordType>
    <fullName>Complaint</fullName>
    <active>true</active>
    <businessProcess>Claim %2B Complaint Support Process</businessProcess>
    <label>CEP Cards Complaint</label>
</RecordType>